--- a/profapp/templates/partials/LoginSignup - Soc Networks.html
+++ b/profapp/templates/partials/LoginSignup - Soc Networks.html
@@ -24,7 +24,7 @@
         </a>
     </div>
 </div>
-<!--
+{#
     <a pr_test="GoogleLogin" class="login-by login-by-google"
        href="{{ url_for('auth.login_signup_soc_network', soc_network_name='google', portal_id=request.args.get('subscribe', None)) }}">
 
@@ -38,9 +38,9 @@
 
     </a>
     {#<a href="{{ url_for('auth.login_signup_soc_network', soc_network_name='twitter', portal_id=request.args.get('subscribe', None)) }}">twitter</a>#}
-    <a pr_test="MicrosoftLogin" class="login-by login-by-microsoft"
+    {#<a pr_test="MicrosoftLogin" class="login-by login-by-microsoft"
        href="{{ url_for('auth.login_signup_soc_network', soc_network_name='microsoft', portal_id=request.args.get('subscribe', None)) }}">
 
-    </a>-->
+    </a>-->#}
 {#<a href="{{ url_for('auth.login_signup_soc_network', soc_network_name='yahoo', portal_id=request.args.get('subscribe', None)) }}">yahoo</a>#}
 {#    <a class="login-by login-by-vkontakte" href="{{ url_for('auth.login_signup_soc_network', soc_network_name='vkontakte', portal_id=request.args.get('subscribe', None)) }}"></a>#}
