--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -38,6 +38,7 @@
     {% raw %}
     <div ng-controller="edit_user" class="container" ng-cloak>
     <div af
+         af-amid-save = "amidSave"
          af-after-save="afterSave"
          af-amid-load="amidLoad" class="edit_user_profile" ng-model="data">
         <div class="row link-page">
