--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -83,7 +83,7 @@
     <script src="//static.profireader.com/static/js/profireader_angular.js"></script>
     <script src="//static.profireader.com/static/js/profireader.js"></script>
 
-    <script src="/static/new/jquery-datetimepicker/jquery.datetimepicker.full.min.js"></script>
+    <script src="/static/new/jquery-datetimepicker/jquery.datetimepicker.js"></script>
     <script>
         {% for message in get_flashed_messages() %}
             add_message('{{ message }}', 'warning');
