--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -12,6 +12,12 @@
 body {
   padding-top: 100px;
 }
+.item-company {
+  color: #00BBA1;
+}
+.navbar-brand img {
+  width: 60%;
+}
 .ellipsis {
   overflow: hidden;
   white-space: nowrap;
@@ -24,7 +30,7 @@ body {
   margin-bottom: 50px;
 }
 .bg-index h4 {
-  color: #18BC9C;
+  color: #00BBA1;
   text-align: center;
   margin-bottom: 25px;
 }
@@ -39,7 +45,7 @@ body {
 }
 .index-about h3 {
   display: inline;
-  color: #18BC9C;
+  color: #00BBA1;
 }
 .index-links {
   background-color: #fff;
@@ -63,11 +69,11 @@ body {
 .index-links i {
   border-radius: 95px;
   padding: 20px;
-  color: #18BC9C;
+  color: #00BBA1;
 }
 .index-links h3 {
   text-align: center;
-  color: #18BC9C;
+  color: #00BBA1;
   margin-bottom: 15px;
   margin-top: 15px;
 }
@@ -100,14 +106,14 @@ body {
 .menu-company a:hover {
   color: #fff;
   text-decoration: none;
-  background-color: #18BCA2;
+  background-color: #00ceb1;
   transition: all 0.2s ease-out;
   padding: 15px;
 }
 .menu-company .selected {
   color: #fff;
   text-decoration: none;
-  background-color: #18BCA2;
+  background-color: #00ceb1;
   padding: 15px;
 }
 .about-company a {
@@ -126,7 +132,7 @@ body {
   margin-bottom: 15px;
 }
 .company-portal a:hover {
-  color: #18BC9C;
+  color: #00BBA1;
   text-decoration: none;
   border-bottom: 1px solid;
   transition: all 0.2s ease-out;
@@ -182,13 +188,13 @@ body {
   border-bottom: 1px solid #fff;
 }
 .company-portal a:hover {
-  color: #18BC9C;
+  color: #00BBA1;
   text-decoration: none;
   border-bottom: 1px solid;
   transition: all 0.2s ease-out;
 }
 .company-portal .selected a {
-  color: #18BC9C;
+  color: #00BBA1;
   text-decoration: none;
   border-bottom: 1px solid;
   transition: all 0.2s ease-out;
@@ -324,7 +330,7 @@ body {
 }
 .search-company input:focus,
 .search-company input:active {
-  border-color: #18BCA2;
+  border-color: #00ceb1;
 }
 .search-company button {
   border-radius: 3px;
@@ -375,20 +381,20 @@ body {
 .join-new-company button {
   width: 100%;
   margin-top: 30px;
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #00BBA1;
+  border-color: #00BBA1;
   border-radius: 3px;
 }
 .join-new-company button:hover {
-  background-color: #18BCA2;
-  border-color: #18BCA2;
+  background-color: #00ceb1;
+  border-color: #00ceb1;
   transition: all 0.2s ease-out;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .join-new-company button:focus,
 .join-new-company button:active {
-  background-color: #18BCA2;
-  border-color: #18BCA2;
+  background-color: #00ceb1;
+  border-color: #00ceb1;
 }
 .not-found h3 {
   text-align: center;
@@ -422,8 +428,8 @@ body {
 }
 .company-thumbnail button {
   padding: 5px;
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #00BBA1;
+  border-color: #00BBA1;
   border-radius: 3px;
   width: 100%;
   margin-bottom: -15px;
@@ -432,14 +438,14 @@ body {
 .company-thumbnail button:focus,
 .company-thumbnail button:active,
 .company-thumbnail button:hover {
-  background-color: #18BCA2;
-  border-color: #18BCA2;
+  background-color: #00ceb1;
+  border-color: #00ceb1;
 }
 .some-company-info h3 {
   text-align: center;
 }
 .some-company-info a {
-  color: #18BC9C;
+  color: #00BBA1;
   text-decoration: none;
 }
 .company .edit-company button {
@@ -479,15 +485,15 @@ body {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .go-portal {
-  background-color: #18BC9C;
+  background-color: #00BBA1;
   color: #fff;
-  border-color: #18BC9C;
+  border-color: #00BBA1;
 }
 .go-portal:hover,
 .go-portal:focus,
 .go-portal:active {
-  background-color: #18BCA2;
-  border-color: #18BCA2;
+  background-color: #00ceb1;
+  border-color: #00ceb1;
   color: #fff;
 }
 .edit-data {
@@ -558,7 +564,7 @@ body {
 }
 .reader-content .item-publication-date {
   font-size: 14px;
-  border-bottom: 1px solid #18BCA2;
+  border-bottom: 1px solid #00ceb1;
   padding-bottom: 10px;
 }
 .reader-content .like-count {
@@ -648,7 +654,7 @@ body {
   text-align: center;
 }
 .name-subscriptions h5 {
-  background-color: #18BC9C;
+  background-color: #00BBA1;
   color: #fff;
   float: left;
   padding: 10px;
@@ -668,7 +674,7 @@ body {
   transition: all 0.2s ease-out;
 }
 .link-page h5 {
-  background-color: #18BC9C;
+  background-color: #00BBA1;
   color: #fff;
   float: left;
   padding: 10px;
@@ -690,7 +696,7 @@ body {
 }
 .profile-window h3 {
   text-align: center;
-  color: #18BC9C;
+  color: #00BBA1;
 }
 .profile-window p {
   line-height: 10px;
@@ -840,24 +846,24 @@ body {
 }
 .serch-portal input:active,
 .serch-portal input:focus {
-  border-color: #18BCA2;
+  border-color: #00ceb1;
 }
 .serch-portal .btn-search-portal {
   color: #fff;
   width: 100%;
   margin-top: 35px;
-  background-color: #18BC9C;
+  background-color: #00BBA1;
   border-radius: 3px;
   border: none;
   padding: 10px;
 }
 .serch-portal .btn-search-portal:hover {
-  background-color: #18BCA2;
+  background-color: #00ceb1;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   transition: all 0.2s ease-out;
 }
 .serch-portal .address-portal {
-  color: #18BC9C;
+  color: #00BBA1;
 }
 .serch-portal .block-portal {
   margin-top: 15px;
@@ -1024,6 +1030,9 @@ body {
   }
   .edit-company button {
     text-align: center;
+  }
+  .navbar-brand {
+    width: 60%;
   }
 }
 /*# sourceMappingURL=style.css.map */
