--- a/profapp/templates/templates-angular.html
+++ b/profapp/templates/templates-angular.html
@@ -87,10 +87,9 @@
                                 type="radio"> {{ division.name }}
                     </label>
                 </div>
-                {{ _('Select publication date') }}<span
+             <!--   {{ _('Select publication date') }}<span
                     ></span><br/>
-                {{ data.publication.publishing_tm }}
-                <input pr-date-timepicker ng-model="data.publication.publishing_tm" pr-element-class="form-control" style="width: 15em;" placeholder="mm/dd/yyyy">
+                <input pr-date-timepicker ng-model="data.publication.publishing_tm" pr-element-class="form-control" style="width: 15em;" placeholder="mm/dd/yyyy">-->
                 <div ng-if="is_selection_division_event()">
                     {{ _('Select event date') }}<span af-validation-answer="data_validation:event_tm"></span><br/>
                     <input pr-date-timepicker ng-model="data.publication.publishing_tm" pr-element-class="form-control" style="width: 15em;" placeholder="mm/dd/yyyy">
