--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -26,7 +26,7 @@
             var trusted = {};
 
             $scope.get_local_time = function (date) {
-                return getLocalTime(date, true)
+                return prFormatDate(date)
             };
 
 {#            $scope.getPopoverContent = function(article) {#}
