--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -23,7 +23,8 @@
     {% raw %}
     <div class="reset row" ng-controller="resetpassword">
         <div class="link-page" ng-cloak>
-            <h5>{{ _('Reset Your Password') }}</h5>
+            <h5>{{ _('
+                Reset Your Password') }}</h5>
         </div>
 
                 <form ng-cloak name="formEmail" class="reset-page">
