--- a/profapp/templates/partials/Profireader_content.html
+++ b/profapp/templates/partials/Profireader_content.html
@@ -4,7 +4,7 @@
         <div class="row index-about">
             <div class="col-lg-offset-1 col-lg-10">
                 <h3>Profireader.com </h3><small>- сервіс для видавців нішевих онлайн медіа, який виконує для видавців усю технічну
-                    роботу, дозволяючи сконцентруватись на основному - підготовці якісної інформаціїї та модерації
+                    роботу, дозволяючи сконцентруватись на основному - підготовці якісної інформації та модерації
                     спільноти своїх читачів. Profireader.com ідеально підходить для створення та підтримки:
                 <ul>
                     <li>
