--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -90,7 +90,7 @@
             <div class="navbar-header col-lg-4 col-md-4 col-sm-4 col-xs-12 hamburger-menu">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">{{ _('Toggle navigation') }}</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -104,18 +104,18 @@
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul>
-                        <li ng-if="user.id"><a pr_test="ReadLine" href="{{ url_list_reader() }}" title="{{ _('Стрічкa читача') }}" ng-class="{'selected': selected_user_menu == 'list_reader'}"><i
+                        <li ng-if="user.id"><a pr_test="ReadLine" href="{{ url_list_reader() }}" title="{{ _('Readers list') }}" ng-class="{'selected': selected_user_menu == 'list_reader'}"><i
                                 class="fa fa-newspaper-o"></i></a></li>
-                        <li ng-if="user.id"><a pr_test="UserMassages" href="{{ url_messenger }}" title="{{ _('Всі повідомлення') }}"
+                        <li ng-if="user.id"><a pr_test="UserMassages" href="{{ url_messenger }}" title="{{ _('All messages') }}"
                                ng-class="{'selected': selected_user_menu == 'messages'}"><i
                                 class="fa fa-envelope-o"></i></a></li>
-                        <li ng-if="user.id"><a pr_test="CompaniesList" href="{{ url_company_companies() }}" title="{{ _('Компанії') }}"
+                        <li ng-if="user.id"><a pr_test="CompaniesList" href="{{ url_company_companies() }}" title="{{ _('Companies') }}"
                                ng-class="{'selected': selected_user_menu == 'companies'}"><i
                                 class="fa fa-building-o"></i></a></li>
-                        <li ng-if="user.id"><a pr_test="FileManeger" href="{{ login_or_none_href() }}" ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
+                        <li ng-if="user.id"><a pr_test="FileManeger" href="{{ login_or_none_href() }}" ng-click="open_filemanager()" title="{{ _('File manager') }}"
                                ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
                                 class="fa fa-folder-open-o"></i></a></li>
-                        <li class="info-padding"><a pr_test="UserInfo" href="{{ url_general_help() }}" title="{{ _('Інформація') }}"
+                        <li class="info-padding"><a pr_test="UserInfo" href="{{ url_general_help() }}" title="{{ _('Help information') }}"
                                ng-class="{'selected': selected_user_menu == 'info'}"><i class="fa fa-info"></i></a></li>
 
                         <li class="dropdown"><a class="dropbtn" title="{{ _('Мова') }}"><i class="fa fa-language"></i></a>
@@ -132,7 +132,7 @@
                                 <img class="person-small-cover" pr-image="" pr-no-image="{{ user_avatar_url }}">
                                 {{user.name}}
                             </a>
-                            <a pr_test="LogOut" class="login-profile" href="{{ url_auth_logout() }}">Log out</a>
+                            <a pr_test="LogOut" class="login-profile" href="{{ url_auth_logout() }}">{{ _('Log out') }}</a>
                             <!--<ul class="dropdown-menu">
                                 <li ng-show="user.id"><a href="{{ url_user_profile({user_id:user.id}) }}">{{ _('Profile') }}</a></li>
                                 <li ng-show="user.id" ><a href="{{ url_auth_logout() }}" >{{_('Log Out') }}</a></li>
@@ -142,7 +142,7 @@
                         </li>
 
                         <li ng-if="!user.id" role="presentation" class="menu-profile">
-                            <a pr_test="LogIn" class="login-profile" href="{{ login_url }}?login_signup=login">Login</a>
+                            <a pr_test="LogIn" class="login-profile" href="{{ login_url }}?login_signup=login"><span>{{ _('Login') }}</span></a>
                         </li>
                     </ul>
                 </div>
