--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -84,15 +84,15 @@
     <div class="container" ng-init="loadData()" ng-controller="companies_list" ng-cloak>
         <div class="row join-company">
             <div class="col-lg-3 create-company pull-right">
-                <button pr-test="CreateNewCompany" class="btn btn-default" type="button" ng-click='createCompany()'>{{
-                    _('Create new company') }}
+                <button pr-test="CreateNewCompany" class="btn btn-default" type="button" ng-click='createCompany()'><div>{{
+                    _('Create new company') }}</div>
                 </button>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                        <h3>{{ _('Join to company') }}</h3>
+                        <h3><div>{{ _('Join to company') }}</div></h3>
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 search-company">
                         <div class="input-group" style="width: 100%">
@@ -142,8 +142,8 @@
                                                                                                     ng-click="show_more()">{{
             _('Show more search results') }}</a></h4></div>
         <div class="row company-list">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3 ng-if="data.companies.length>0">Your company list:</h3>
-                <h2 ng-if="data.companies.length===0 && !loading">You haven't got any company yet!Create own or join to!</h2>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3 ng-if="data.companies.length>0"><div>{{ _('Your company list') }}:</div></h3>
+                <h2 ng-if="data.companies.length===0 && !loading"><div>{{ _('You haven\'t got any company yet!Create own or join to!') }}</div></h2>
             </div>
             <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-6"
                  ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
