--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -82,7 +82,8 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Birthday') }}</span>
 
-                    <input pr-date-timepicker ng-model="data.user.birth_tm" pr-element-class="form-control" pr-mode="date">
+                    <input pr-date-timepicker ng-model="data.user.birth_tm" pr-element-class="form-control"
+                           pr-mode="date">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Gender') }}</span>
@@ -112,14 +113,15 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Password') }}</span>
                     <input class="form-control" aria-describedby="sizing-addon1" type="text"
-                           placeholder="if you want change password, put it here!" ng-model="data.change_password.password1"
-                    pr-validation-answer="data_validation:password1">
+                           placeholder="if you want change password, put it here!"
+                           ng-model="data.change_password.password1"
+                           pr-validation-answer="data_validation:password1">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Confirm password') }}</span>
                     <input class="form-control" aria-describedby="sizing-addon1" type="text"
                            placeholder="comfirm password" ng-model="data.change_password.password2"
-                    pr-validation-answer="data_validation:password2">
+                           pr-validation-answer="data_validation:password2">
 
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
@@ -146,7 +148,7 @@
                     </button>
                 </div>
             </form>
-
+            </div>
         </div>
     </div>
     {% endraw %}
