--- a/profapp/templates/partials/Log in - Profireader.html
+++ b/profapp/templates/partials/Log in - Profireader.html
@@ -15,15 +15,15 @@
 {#        });#}
 {#      });#}
 {#    </script>#}
-<h3>{{ '{{' }}_('Log in using Profireader'){{ '}}' }}</h3>
+<h3>{{ _('Log in using Profireader') }}</h3>
 
     <form class="login-form-profirider" id="login-form-profirider" action="{{ url_for('auth.login') }}" method="post">
         <input class="form-control" type="email" placeholder="email" required name="email" ng-pattern="/[0-9a-z_]+@[0-9a-z_]+\.[a-z]{2,5}/">
-        <div ng-show="formLogin.email.$error.pattern" class="error-input">The email not validate!</div>
+        <div ng-show="formLogin.email.$error.pattern" class="error-input">{{ _('The email not validate!') }}</div>
         <input class="form-control" type="password" placeholder="password" required name="password">
         <input class="submit-form" type="submit">
         <div class="logout-now">
-            <p>{{ '{{' }}_('Forgot your password'){{ '}}' }}? <a pr-test="PassResetRequest" href="{{ url_for('auth.password_reset_request') }}">{{ '{{' }}_('Click here to Reset it'){{ '}}' }}</a>.</p>
+            <p>{{ _('Forgot your password') }}? <a pr-test="PassResetRequest" href="{{ url_for('auth.password_reset_request') }}">{{ _('Click here to Reset it') }}</a>.</p>
 {#           <p>{{ '{{' }}_('New user'){{ '}}' }}? <a pr-test="ClickHereToReg" href="{{ url_for('auth.signup') }}">{{ '{{' }}_('Click here to register'){{ '}}' }}</a>.</p>#}
         </div>
     </form>
