--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -124,8 +124,8 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Phone') }}</span>
-                    <input class="form-control" aria-describedby="sizing-addon1" type="number"
-                           placeholder="your phone">
+                    <input class="form-control" ng-model="data.user.profireader_phone" aria-describedby="sizing-addon1"
+                           placeholder="your phone" pr-validation-answer="data_validation:profireader_phone">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Location') }}</span>
