--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -11,9 +11,13 @@
       $scope.$$translate = {{ translates('resetpassword')|safe }};
       $scope.password_reset_request = '{{ url_for('auth.password_reset_request') }}'
       $scope.email = ''
+      $scope.isDisabled = false;
+      $scope.disableButton = function() {
+            $scope.isDisabled = true;
+        }
 
       $scope.sendMessage = function(email) {
-
+          $scope.disableButton()
           return $ok($scope.password_reset_request, {email:email}, function(password_reset_request){
                 window.location.href = '{{ url_for('reader.list_reader') }}'
           })
@@ -23,8 +27,7 @@
     {% raw %}
     <div class="reset row" ng-controller="resetpassword">
         <div class="link-page" ng-cloak>
-            <h5>{{ _('
-                Reset Your Password') }}</h5>
+            <h5>{{ _('Reset Your Password') }}</h5>
         </div>
 
                 <form ng-cloak name="formEmail" class="reset-page">
@@ -34,7 +37,9 @@
                     <div ng-show="formReset.profireader_email.$error.pattern" class="error-input">The
                         email not validate!
                     </div>
-                    <button pr-test="SendMessage" class="col-lg-3 col-md-3 col-sm-3 col-xs-12 pull-right" ng-click="sendMessage(email)" type="submit">{{ _('Reset password') }}</button>
+                    <button pr-test="SendMessage" class="col-lg-3 col-md-3 col-sm-3 col-xs-12 pull-right"
+                            ng-click="sendMessage(email)"
+                            ng-disabled="isDisabled" type="submit">{{ _('Reset password') }}</button>
                 </form>
     </div>
     {% endraw %}
