--- a/profapp/templates/auth/reset_password_token.html
+++ b/profapp/templates/auth/reset_password_token.html
@@ -3,7 +3,7 @@
 {% block title %}Profireader - Articles list{% endblock title %}
 
 {% block portal_content %}
-    <div ng-controller="UserLoginController" ng-cloak class="row">
+    <div ng-controller="ResetPassword" ng-cloak class="row">
         <div>
             <h1 class="nice-title">{{ _('Reset Your Password')}}<span></span></h1>
         </div>
