--- a/profapp/static/front/spring/css/style.css
+++ b/profapp/static/front/spring/css/style.css
@@ -1,1 +1,84 @@
+.link-no-style,
+.link-no-style:hover,
+.link-no-style:active,
+.link-no-style:visited {
+  text-decoration: none;
+  color: inherit;
+}
+.portal-body {
+  background-color: #FCFCFC;
+  min-height: 100vh;
+}
+.search-block {
+  margin-top: 15px;
+}
+.search-block input {
+  border-radius: 0;
+}
+.search-block input:active,
+.search-block input:hover,
+.search-block input:focus {
+  border-color: #FF5252;
+}
+.search-block .search {
+  padding-right: 0;
+}
+.search-block i {
+  background-color: #FF5963;
+  padding: 10px;
+  color: #fff;
+}
+.search-block .icon-search {
+  padding-left: 0;
+}
+.logo-portal {
+  background-color: #212121;
+  color: #fff;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.content-block {
+  margin-top: 65px;
+}
+.left-menu {
+  color: #fff;
+  background-color: #ff5252;
+  height: 92vh;
+}
+.left-menu a {
+  display: block;
+  padding: 12px 16px;
+}
+.left-menu a:hover {
+  background-color: #0a0a0a;
+  transition: all 0.2s ease-out;
+}
+.left-menu .user-prof {
+  padding-top: 15px;
+  background: url("../../../images/kindajean.png");
+}
+.left-menu .user-prof img {
+  border-radius: 50%;
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+}
+.left-menu .user-prof p {
+  margin-bottom: 0;
+  text-align: center;
+  margin-top: 10px;
+  background-color: #212121;
+  color: #FFFFFF;
+}
+.footer-portal {
+  margin-top: 50px;
+  background-color: #212121;
+  color: #FF5252;
+  font-size: 10px;
+  text-align: center;
+  padding: 20px 0px;
+  box-shadow: 0 -3px 4px -2px rgba(0, 0, 0, 0.5);
+}
+.publications img {
+  width: 100%;
+}
 /*# sourceMappingURL=style.css.map */
