--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -10,8 +10,8 @@
     module.controller('resetpassword',  function($scope, $ok){
       $scope.$$translate = {{ translates('resetpassword')|safe }};
       $scope.password_reset_request = '{{ url_for('auth.password_reset_request') }}'
-      $scope.email = ''
       $scope.isDisabled = false;
+      $scope.email = null
       $scope.disableButton = function() {
             $scope.isDisabled = true;
         }
@@ -31,15 +31,15 @@
         </div>
 
                 <form ng-cloak name="formEmail" class="reset-page">
-                    <input pr-test="EmailInput" type="email" class="form-control" placeholder="Email"
+                    <input pr-test="EmailInput1" type="email" class="form-control" placeholder="Email"
                        ng-model="email" name="email"
                        ng-pattern="/[0-9a-z_]+@[0-9a-z_]+\.[a-z]{2,5}/">
-                    <div ng-show="formReset.profireader_email.$error.pattern" class="error-input">The
-                        email not validate!
+                    <div ng-show="formEmail.email.$error.pattern" class="error-input">{{ _('The
+                        email not validate!') }}
                     </div>
                     <button pr-test="SendMessage" class="col-lg-3 col-md-3 col-sm-3 col-xs-12 pull-right"
                             ng-click="sendMessage(email)"
-                            ng-disabled="isDisabled" type="submit">{{ _('Reset password') }}</button>
+                            ng-disabled="isDisabled || formEmail.email.$error.pattern" type="submit">{{ _('Reset password') }}</button>
                 </form>
     </div>
     {% endraw %}
