--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -126,7 +126,7 @@
                         <li class="info-padding"><a pr_test="UserInfo" href="{{ url_general_help() }}" title="{{ _('Help information') }}"
                                ng-class="{'selected': selected_user_menu == 'info'}"><i class="fa fa-info"></i></a></li>
 
-                        <li class="dropdown"><a class="dropbtn" title="{{ _('Мова') }}"><i class="fa fa-language"></i></a>
+                        <li class="dropdown"><a class="dropbtn" title="{{ _('Language') }}"><i class="fa fa-language"></i></a>
                         <div class="dropdown-content">
                             <a ng-repeat="language in languages" ng-class="{'selected': language.name == lang}" style="cursor: pointer" ng-click="changeLanguage(language.name)">{{language.display}}</a>
                           </div>
