--- a/profapp/static/front/spring/css/style.css
+++ b/profapp/static/front/spring/css/style.css
@@ -78,7 +78,24 @@
   padding: 20px 0px;
   box-shadow: 0 -3px 4px -2px rgba(0, 0, 0, 0.5);
 }
-.publications img {
-  width: 100%;
+.news-block {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  margin-bottom: 30px;
+  padding: 0;
+}
+.news-block .publications {
+  background: url('../../../images/yo.jpg');
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
+  padding: 50%;
+}
+.news-block .content-in-block {
+  background-color: rgba(0, 0, 0, 0.75);
+  padding: 10px;
+  margin-top: -27%;
+  min-height: 80px;
+  max-height: 80px;
+  color: #FFFFFF;
 }
 /*# sourceMappingURL=style.css.map */
