--- a/profapp/templates/front/bird/articles-list.html
+++ b/profapp/templates/front/bird/articles-list.html
@@ -67,7 +67,7 @@
             <a href="{{ url_for('front.subportal', member_company_id = article['company']['id'], member_company_name = article['company']['name']) }}"
                class="item-company">{{ article['company']['name']|safe }}</a>
             {{ article['publishing_tm'] }}
-            <div class="item-publication-date">{{ article['publishing_tm']|localtime }}</div>
+            <div class="item-publication-date">{{ moment(article['publishing_tm']) }}</div>
             <div><br>
                 <script type="text/javascript">getSearchBlock({{ article|tojson }})</script>
             </div>
